# hive-memory

./: .gitignore  Cargo.toml  PLAN.md  README.md  SPEC.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
man/man1/: hm.1
plans/: bm25-experiment-results.md  deferred-feature-evals.md  full-text-retrieval.md  llm-classifier.md  mem0-inspired-memory.md  memory-improvements-roadmap.md
scripts/: README.md  cargo-version.sh  download-longmemeval-fixture  package-release.sh  release-tag.sh  release-version.sh  release.sh  smoke-release.sh  termux-ci.sh
src/: README.md  capture.rs  classify.rs  config.rs  context.rs  curated.rs  curation.rs  doctor.rs  entity.rs  eval.rs  event.rs  hook.rs  id.rs  index.rs  inject.rs  lib.rs  llm.rs  main.rs  memory.rs  note.rs  outbox.rs  path.rs  project.rs  reconcile.rs  render.rs  retrieval.rs  search.rs  secret.rs  signals.rs  store.rs  supersession.rs  validity.rs  version.rs  visibility.rs  write.rs  write_classify.rs
src/cli/: context.rs  curation.rs  eval.rs  hook.rs  mod.rs  projects.rs  search.rs  stores.rs  sync.rs  sync_status.rs
tests/: README.md  autocapture_eval.rs  automation.rs  classify_eval.rs  cli.rs  cloud_sync_sim.rs  deferred_feature_eval.rs  injection_eval.rs  outbox_resilience.rs  perf_budget.rs  public_longmemeval.rs  qa_accuracy.rs  reconcile_eval.rs  reconcile_secret_refusal.rs  retrieval_eval.rs  retrieval_longmemeval.rs  security_boundaries.rs  write_classification_eval.rs
tests/fixtures/: autocapture_corpus.toml  deferred_feature_eval_corpus.toml  fake-llm  fake-llm-poison  inject_corpus.toml  inject_labels.toml  reconcile_corpus.toml  retrieval_corpus.toml  write_classification_corpus.toml
tests/public_evals/: README.md
tests/shell/: automation-test  helpers.sh  release-scripts-test
