[package]
name = "hive-memory"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Vendor-neutral shared memory infrastructure for AI agents."

[[bin]]
name = "hm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", default-features = false, features = ["formatting", "std"] }
toml = "0.9.8"
uuid = { version = "1.19.0", default-features = false, features = ["std", "v7"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
