[package]
name = "hive-memory"
version = "0.3.2"
edition = "2024"
license = "MIT"
description = "Vendor-neutral shared memory infrastructure for AI agents."

[lints.rust]
warnings = "deny"

[[bin]]
name = "hm"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", default-features = false, features = ["formatting", "parsing", "std"] }
toml = "0.9.8"
unicode-normalization = "0.1.25"
uuid = { version = "1.19.0", default-features = false, features = ["std", "v7"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
